# stem_networking_bench

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.daqiri  README.md  analyze_spectrum_dm4.py  analyze_stitch_dm4.py  apply_dark_recovery_correction.py  compare_blr_grouping_dm4.py  compare_nio_current_study.py  compare_nio_stitch_study.py  convert_dm4_to_hdf5.py  hdf5_replayer_op.cpp  hdf5_replayer_op.h  hdf5_writer_op.cpp  hdf5_writer_op.h  kernels.cu  kernels.cuh  main.cpp  make_dark_frame.py  make_dark_frame_from_dm4.py  offline_process_hdf5.py  plot_blr_baseline_samples.py  plot_blr_row_geometry_dm4.py  plot_dark_frame.py  plot_dark_recovery_case_study.py  plot_dark_subtraction_analysis.py  plot_h5_frames.py  plot_nio_processing_analysis.py  plot_single_frame_blr_samples.py  pytorch_processor_op.cpp  pytorch_processor_op.h  run_nio_current_study.py  run_nio_stitch_study.py  run_offline_pipeline.py  run_profile  run_with_hdf5.yaml  (+3 more)
cpp/: CMakeLists.txt  CMakeLists.txt.install  hdf5_replayer_op.cpp  hdf5_replayer_op.h  hdf5_writer_op.cpp  hdf5_writer_op.h  kernels.cu  kernels.cuh  main.cpp  metadata.json  nvtx_ranges.hpp  pytorch_processor_op.cpp  pytorch_processor_op.h  run_with_hdf5.yaml  run_with_network_fpga.yaml  run_with_network_fpga_1rcv.yaml  stem_receiver_op.h
cpp_daqiri/: CMakeLists.txt  README.md
cpp_daqiri/benchmarks/: daqiri_default_rx_spark201a.yaml  daqiri_default_tx_spark960b.yaml  parity_table_sweep_20260528T001208Z.md  results.md
cpp_daqiri/common/: stem_daqiri_hello.cpp  stem_kernels.cu  stem_kernels.h  stem_pacing.cpp  stem_pacing.h  stem_packet.h
cpp_daqiri/configs/: hello_self_test.yaml  pcap_capture.yaml  stem_replay_hdf5.yaml  stem_rx_igx_fpga_dual.yaml  stem_rx_igx_loopback.yaml  stem_rx_igx_loopback_hds.yaml  stem_rx_igx_production.yaml  stem_rx_spark.yaml  stem_rx_spark_hds.yaml  stem_rx_spark_tiled.yaml  stem_tx_igx_loopback.yaml  stem_tx_spark.yaml
cpp_daqiri/rx/: stem_rx_main.cpp
cpp_daqiri/scripts/: compare_h5_outputs.py  daqiri_docker_exec.sh  parse_phase3_results.py  parse_spark_parity_results.py  run_daqiri_hdf5_replay.sh  run_daqiri_validation.sh  run_igx_loopback.sh  run_phase1_rx.sh  run_phase1_tx.sh  run_phase2_rx.sh  run_phase2_tx.sh  run_phase3_sweep_orchestrated.sh  run_phase3_sweep_rx.sh  run_phase3_sweep_tx.sh  run_spark_daqiri_rx.sh  run_spark_daqiri_tx.sh  run_spark_daqiri_tx_for_rx.sh  run_spark_holoscan_rx_validator.sh  run_spark_parity_sweep_orchestrated.sh  run_spark_parity_sweep_rx.sh  run_spark_parity_sweep_tx.sh  verify_daqiri_capability.sh  verify_phase.sh
cpp_daqiri/tx/: stem_tx_main.cpp
docs/: CURRENT_PACKET_FORMAT.md  DARK_FRAME_WORKFLOW.md  PYTHON_ANALYSIS.md
scripts/: README.md  __init__.py
scripts/conversion/: __init__.py  convert_dm4_to_hdf5.py
scripts/dark/: __init__.py  make_dark_frame_from_dm4.py  plot_dark_frame.py
scripts/diagnostics/: __init__.py  apply_dark_recovery_correction.py  check_dump.py  compare_blr_grouping_dm4.py  plot_blr_baseline_samples.py  plot_blr_row_geometry_dm4.py  plot_dark_recovery_case_study.py  plot_dark_subtraction_analysis.py  plot_single_frame_blr_samples.py
scripts/offline/: __init__.py  offline_process_hdf5.py  plot_h5_frames.py  run_offline_pipeline.py
scripts/studies/: __init__.py  analyze_spectrum_dm4.py  analyze_stitch_dm4.py  compare_nio_current_study.py  compare_nio_stitch_study.py  run_nio_current_study.py  run_nio_stitch_study.py
stem_analysis/: __init__.py  config.py  dm4.py  hdf5.py  plotting.py  processing.py  spectra.py  stitch.py
